apps/base/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-prod-ingress
  namespace: mealie
  labels:
    app: mealie
spec:
  ingressClassName: nginx
  rules:
  - host: "mealie.home.arpa"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mealie-prod-svc
            port:
              number: 9000
